last try for now at fixing weird mobile cutoff text

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -9,12 +9,14 @@
     // @include mqv(1000px) {
     //     justify-content: end;    
     // }
+    align-items: end;
     h2,
     h3,
     h5,
     p,
     a {
-        z-index: 10;
+        width: 80%;
+    white-space: pre-wrap;
     }
 
     text-align: end;
